--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             <div class="sixth-page-button">
                 <button><a href=""></a>Ger Started Free</button>
             </div>
-            <div class="sixth-page-picture">
-                <img src="Assets/wc-big.png" alt="">
+            <div>
+                <img class="sixth-page-picture" src="Assets/wc-big.png" alt="">
             </div>
 
         </section>
