--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@
         </section>
 
     </main>
+    <section class="seventh-page">
+        <div class="title"><h2>Let’s Get in Touch</h2></div>
+        <form class="your-form" action="">
+            <input type="email" name="" id="" placeholder="example@email.com">
+            <input type="text" name="" id="" placeholder="Your Name">
+            <textarea name="" id="" cols="20" rows="10" placeholder="message"></textarea>
+        </form>
+
+    </section>
     <footer>
 
     </footer>
